force-app/main/default/objects/EmailValidatorLog__c.object
<CustomObject>
    <label>Email Validator Log</label>
    <nameField>
        <displayFormat>EV-LOG-{000000000}</displayFormat>
        <label>Email Validator Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Validator Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>