force-app/main/default/objects/EmailValidatorLog__c/fields/BusinessUnitId__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnitId__c</fullName>
    <inlineHelpText>ID of the Pardot Business Unit</inlineHelpText>
    <label>Business Unit ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>