force-app/main/default/objects/EmailValidatorLog__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <inlineHelpText>Email address as provided by the user</inlineHelpText>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>