force-app/main/default/objects/EmailValidatorLog__c/fields/RawMessage__c.field-meta.xml
<CustomField>
    <fullName>RawMessage__c</fullName>
    <inlineHelpText>Message returned by the external web services</inlineHelpText>
    <label>Raw Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>