force-app/main/default/objects/EmailValidatorLog__c/fields/ServiceName__c.field-meta.xml
<CustomField>
    <fullName>ServiceName__c</fullName>
    <label>Service Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abstract</fullName>
            </value>
            <value>
                <fullName>EmailRep</fullName>
            </value>
            <value>
                <fullName>Neverbounce</fullName>
            </value>
            <value>
                <fullName>Sendgrid</fullName>
            </value>
            <value>
                <fullName>Zerobounce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>