force-app/main/default/objects/EmailValidatorLog__c/fields/StatusIcon__c.field-meta.xml
<CustomField>
    <fullName>StatusIcon__c</fullName>
    <formula>CASE(TEXT(Status__c), 
					&apos;Success&apos;, &apos;✅&apos;, 
					&apos;Error&apos;, &apos;🛑&apos;,
					&apos;🔍&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Icon</label>
    <type>Text</type>
</CustomField>