force-app/main/default/objects/EmailValidatorLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ServiceName__c</columns>
    <columns>BusinessUnitId__c</columns>
    <columns>Email__c</columns>
    <columns>StatusIcon__c</columns>
    <columns>RawMessage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>